2008-10-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 552861 – glib-2.0.m4 calls system(3) without storing its result

	* m4macros/glib-2.0.m4: Cosmetic change to make -Werror happy.
	Patch by Andreas Köhler

2008-10-08  Christian Persch  <chpe@gnome.org>

        Bug 555313 – GFileAttribute boxed type get_type function should
        use usual get_type pattern

        * gio/gfileattribute.c (g_file_attribute_info_list_get_type): Use
        g_once_init_enter/leave.

2008-10-08  Christian Persch  <chpe@gnome.org>

        Bug 555314 – mem leak in gmarkup

        * glib/gmarkup.c: (g_markup_parse_context_parse): Plug a mem leak.

2008-10-08  Tor Lillqvist  <tml@novell.com>

	Bug 554790 - g_convert() misbehaves with winiconv versions

	* glib/win_iconv.c (kernel_mbtowc): If converting from ASCII,
	explicitly check for and reject 8bit chars. MultiByteToWideChar()
	doesn't, at least not on XP.

2008-10-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/gtypes.h: Properly include gmacros.h

2008-10-06  Behdad Esfahbod  <behdad@gnome.org>

	Bug 555309 – giochannel breaks on error
	Patch from Christian Persch

	* glib/giounix.c (g_io_unix_read), (g_io_unix_write),
	(g_io_unix_seek), (g_io_unix_close), (g_io_unix_set_flags):
	Don't shadow err.  Oops!

2008-10-06  Christophe Fergeau  <teuf@gnome.org>

	Bug 555224 – Improve g_format_size_for_display doc
	
	* glib/gfileutils.c: change g_format_size_for_display API doc to
	explicitly say that the returned string has to be freed. Change
	spelling of "newly allocated" to "newly-allocated" in g_file_read_link
	API doc to be more consistent with what is done in that file.

2008-10-01  David Zeuthen  <davidz@redhat.com>

	* README.in: Add "Notes about glib 2.20" section detailing the
	ramifications of the patch from bug #528670.

2008-09-30  Behdad Esfahbod  <behdad@gnome.org>

	Bug 554092 – glib doesn't return G_FILE_ERROR_NOENT et al on OS X

	* glib/giounix.c (g_io_unix_read), (g_io_unix_write),